birthday_reminder/static/style/birthday_reminder.css
body {
  background-color: #f5f5f5;
  font-family: sans-serif;
}

#main {
  margin: auto;
  margin-top: 75px;
  height: 85vh;
  width: 85vw;
}

/*general css*/
.bold {
  font-weight: 600;
}

.clearfix {
  overflow: auto;
}

.display-none {
  display: none;
}

.center-text {
  text-align: center;
}

.app-color {
  color: #42931F
}

button {
  color: #fff;
  padding: 5px 15px;
  font-size: 15px;
  cursor: pointer;
  border-radius: 5px;
  border-width: 0px;
  text-shadow: 0 -1px 0 rgba(0,0,0,0.25);
  opacity: 0.8;
}

button:hover {
  opacity: 1.0;
  box-shadow: 0px 0px 3px #808080;
}

/*login page*/
#logo {
  background-color: #fff;
  max-width: 800px;
  width: 85%;
  margin: auto;
  font-family: Helvetica;
  padding: 20px 20px;
  border-radius: 3px;
  box-shadow: 0px 0px 5px #4FA025;
}

#drchrono-logo {
  width: 100%;
  max-width: 900px;
}

#login-button {
  width: 220px;
  margin: auto;
  margin-top: 25px;
}

#login-button button {
  color: #f5f5f5;
  padding: 15px 10px;
  background-color: #4FA025;
  border: 1px solid #4FA025;
  opacity: 0.8;
}

#login-button button:hover {
  color: #fff;
  border: 1px solid darkgreen;
  opacity: 1.0;
  box-shadow: 0px 0px 3px #000;
}

.about-app {
  display: inline-block;
  width: 49%;
  margin-top: 30px;
  font-size: 20px;
  vertical-align: top;
}

.about-app li {
  margin-bottom: 20px;
}

/*home page*/
#username {
  font-size: 14px;
  margin-left: 15px;
  font-weight: 400;
}

/*patients list*/
#patient-table {
  background-color: #fff;
  border-radius: 3px;
  box-shadow: 0 1px 2px rgba(0,0,0,.2);
}

#patient-table-label {
  padding-top: 5px;
  border-radius: 3px;
  display: block;
  font-size: 20px;
  margin-bottom: 5px;
  margin-top: 10px;
  background-color: #696f7d;
  color: #fff;
  padding-left: 5px;
  border: 1px solid #474B54;
}

#patient-list {
  overflow-y: scroll;
  max-height: 80%;
  border-top: 1px solid #D3D3D3;
}

#patient-table-head {
  width: 98.5%;
  padding: 4px 0px;
}

.patient {
  border-bottom: 1px solid #f5f5f5;
  padding: 2px 0px;
}

.patient-col {
  display:inline-block;
  word-wrap: break-word;
}

.col-last-name {
  width: 18%;
  padding-left: 10px;
}

.col-first-name {
  width: 18%;
}

.col-email {
  width: 25%;
}

.col-birthday {
  width: 20%;
}

.col-send-check {
  width: 12%;
}

.col-send-check>input {
  position: relative;
  left: 25%;
  bottom: 2px;
}

.changed {
  background-color: #ADD8E6;
}

#update-list-button {
  float: right;
  font-size: 13px;
  margin-right: 1%;
  padding: 1px 10px;
  background-color: #364650;
}

/*edit email page*/
#email-description {
  font-size: 13px;
}

#email-subject-input {
  margin-bottom: 25px;
  margin-top: 10px;
}

.email-input {
  width: 75%;
  max-width: 700px;
  font-size: 15px;
  border: 0px;
  box-shadow: 0 1px 1px #ccc;
  padding: 10px;
}

/*save buttons and save results*/
#email-all-button, #email-none-button  {
  width: 360px;
  margin-bottom: 5px;
}

#email-all-button {
  background-color: #459420;
  margin-right: 5px;
}

#email-none-button {
  background-color: #B22222;
}

.save-button {
  margin-top: 20px;
  background-color: #0769AD;
}

.save-button[disabled] {
  cursor: not-allowed;
  color: #B5B5B5;
  background-color: #808080;
  opacity: 0.2;
}

.save-button[disabled]:hover {
  box-shadow: 0px 0px 0px #000;
}

.center-screen {
  position: absolute;
  z-index: 100;
  left: 0;
  right: 0;
}

#save-guard {
  width: 100%;
  height: 100%;
  top: 0;
}

#save-guard.loading-guard {
  background-color: #D3D3D3;
  opacity: 0.9;
}

#loading-screen {
  text-align: center;
  margin-top: 200px;
  margin-left: auto;
  margin-right: auto;
  font-size: 25px;
  width: 45%;
  background-color: #309549;
  color: #fff;
  padding: 20px 0px;
  padding-right: 70px;
  border-radius: 5px;
}

.loading-screen-content {
  display: inline-block;
}

#save-success {
  background-color: #fcf8e3;
  border: 1px solid #faebcc;
}

#save-fail {
  background-color: #A21515;
  border: 1px solid #790F0F;
  color: #fff;
}

.save-result {
  position: fixed;
  left: 0;
  right: 0;
  text-align: center;
  top: 75px;
  padding: 15px 0px;
  font-size: 30px;
  opacity: 0.9;
}

/*navbar*/
#nav {
  position: fixed;
  width: 100%;
  height: 40px;
  background-color: #5CB85C;
  top: 0;
  left: 0;
  text-shadow: 0 -1px 0 rgba(0,0,0,0.25);
  z-index: 1000;
}

#nav-left {
  float: left;
}

#nav-right {
  float: right;
}

.nav-link {
  width: 225px;
  text-align: center;
  height: inherit;
  background-color: #55B914;
  opacity: 0.7;
  display: inline-block;
  vertical-align: bottom;
}

.nav-link:hover {
  opacity: 1.0;
}

.nav-link-left {
  border-right: 1px solid #C0C0C0;
}

.nav-link-right {
  border-left: 1px solid #C0C0C0;
}

.nav-link>a {
  display: block;
  position: relative;
  font-size: 15px;
  text-decoration: none;
  color: #fff;
  height: 40px;
  top: 0;
}

.nav-class-text {
  padding-top: 10px;
}

#drchrono-nav-text {
  position: relative;
  bottom: 5px;
}

/*responsive*/
@media (max-width: 920px) {
  #nav-patients, #sign-out, #to-drchrono {
    width: 125px;
  }

  .email-input {
    width: 100%;
  }
}

